<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arns_gazebo</name>
  <version>0.0.1</version>
  <description>ARNS gazebo simulation package</description>
  <maintainer email="ervinjohnpicardal@gmail.com">Ervin Picardal</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros2_control</depend> 
  <depend>gazebo_ros_pkgs</depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
